# Alpamayo-R1-Distillation

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  DISTILLATION_PLAN.md  Dockerfile  MODEL_CARD.md  PROJECT_PLAN.md  PROJECT_UPDATE.md  Project_Plan.md  README.md  alpamayo_distillation.pptx  alpamayo_distillation_plan.md  batch_inference.py  data.yaml  distill.yaml  download_data.py  portainer-compose.yaml  pyproject.toml  student.yaml
alpamayo-output/: results.json  summary.json
artifacts/: example_prediction.json
artifacts/teacher_rollouts/: scene-000000.npz  scene-000001.npz  scene-000002.npz
ckpts/: stage1_warmup.metrics.json
configs/: data.yaml  distill.yaml  stage2.yaml  stage3.yaml  stage3_teacher_hidden.yaml  student.yaml  train_stage1.yaml  train_stage2.yaml  train_stage3.yaml  train_stage4.yaml
data/splits/: teacher_inference_100.json
deploy/portainer/: README.md  teacher-export.stack.yml
scripts/: __init__.py  benchmark_latency.sh  download_physical_ai_dataset.py  eval_all.sh  eval_open_loop.sh  eval_stage2.py  eval_stage3.py  export_teacher_dump.py  run_inference_example.sh  run_teacher_rollout.sh  train_stage1.sh  train_stage2.py  train_stage2.sh  train_stage3.py  train_stage3.sh  train_stage4.sh  validate_rollout.sh  validate_teacher_dump.py
scripts/docker/: bootstrap_repo.sh  build.sh  check.sh  download_physical_ai_dataset.sh  eval_stage2.sh  export_teacher_dump.sh  fix.sh  shell.sh  train_stage2.sh  validate_dump.sh
scripts/portainer/: export_teacher_dump_all.sh
src/: __init__.py
src/alpamayo_distill/: __init__.py  (+1 more)
src/alpamayo_distill.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_rollout_storage.py  test_student_forward.py
(+68 files in other folders)
