[project]
name = "alpamayo-distill"
version = "0.1.0"
description = "Stage-wise distillation scaffold for Alpamayo-1.5."
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.0",
    "bitsandbytes>=0.43",
    "numpy>=1.26",
    "peft>=0.12",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "torch>=2.4",
    "transformers>=4.45",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyright>=1.1.380",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["src", "tests"]
venvPath = "."
reportMissingTypeStubs = "none"
reportPrivateImportUsage = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "gpu: requires a CUDA GPU",
    "requires_dump: requires a teacher dump fixture",
]
